--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.6.4",
     "@tauri-apps/cli": "^1.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
