chore(package.json): add `.repository`

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mugimarks",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/koralle/mugimarks"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
