--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "ci": "biome ci ."
   },
   "dependencies": {
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "the-new-css-reset": "^1.11.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
