--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,7 @@ jobs:
         with:
           reporter: 'github-pr-review'
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          workdir: src-tauri
 
   rustfmt:
     runs-on: ubuntu-latest
@@ -84,5 +85,6 @@ jobs:
       - uses: Swatinem/rust-cache@v2.7.3
 
       - name: Run rustfmt
+        working-directory: src-tauri
         run: cargo fmt -- --check
 
