--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ci": "biome ci ."
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.5.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
