--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
+    "@vanilla-extract/css": "^1.14.2",
+    "@vanilla-extract/sprinkles": "^1.6.1",
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
