--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.12.3",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
+    "@vanilla-extract/next-plugin": "^2.4.0",
     "lefthook": "^1.6.8",
     "typescript": "^5.4.3"
   }
